--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div></div>
     <div class="loader">
         <div class="lds-hourglass"></div>
     </div>
@@ -106,13 +107,13 @@
                             <img src="img/slider/1.jpg" alt="pepper" />
                         </div>
                         <div class="offer__slide">
-                            <img src="img/slider/2.jpg" alt="food">
+                            <img src="img/slider/2.jpg" alt="food" />
                         </div>
                         <div class="offer__slide">
-                            <img src="img/slider/3.jpg" alt="oil">
+                            <img src="img/slider/3.jpg" alt="oil" />
                         </div>
                         <div class="offer__slide">
-                            <img src="img/slider/4.jpg" alt="paprika">
+                            <img src="img/slider/4.jpg" alt="paprika" />
                         </div>
                     </div>
                 </div>
@@ -211,18 +212,10 @@
             <div class="promotion__timer">
                 <div class="title">Осталось до конца акции:</div>
                 <div class="timer">
-                    <div class="timer__block">
-                        <span id="days">90</span> дней
-                    </div>
-                    <div class="timer__block">
-                        <span id="hours">08</span> часов
-                    </div>
-                    <div class="timer__block">
-                        <span id="minutes">11</span> минут
-                    </div>
-                    <div class="timer__block">
-                        <span id="seconds">01</span> секунд
-                    </div>
+                    <div class="timer__block"><span id="days">90</span> дней</div>
+                    <div class="timer__block"><span id="hours">08</span> часов</div>
+                    <div class="timer__block"><span id="minutes">11</span> минут</div>
+                    <div class="timer__block"><span id="seconds">01</span> секунд</div>
                 </div>
             </div>
         </div>
@@ -232,26 +225,43 @@
     <div class="bg_content">
         <div class="about_content1 container">
             <div class="about_left">
-                <p>Eum ipsam laborum deleniti <span>velit pariatur architecto aut nihil</span></p>
-                <p class="text-acc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit</p>
+                <p>
+                    Eum ipsam laborum deleniti
+                    <span>velit pariatur architecto aut nihil</span>
+                </p>
+                <p class="text-acc">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+                </p>
 
-                <button class="accordion"><span>01</span>Non consectetur a erat nam at lectus urna duis?</button>
+                <button class="accordion">
+            <span>01</span>Non consectetur a erat nam at lectus urna duis?
+          </button>
                 <div class="panel">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
                 </div>
 
-                <button class="accordion"><span>02</span>Non consectetur na duis?</button>
+                <button class="accordion">
+            <span>02</span>Non consectetur na duis?
+          </button>
                 <div class="panel">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
                 </div>
 
-                <button class="accordion"><span>03</span>Non consectetur a lectus urna duis?</button>
+                <button class="accordion">
+            <span>03</span>Non consectetur a lectus urna duis?
+          </button>
                 <div class="panel">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
                 </div>
             </div>
             <div class="about_right">
-                <img src="./img/acc.png" width="100%" alt="">
+                <img src="./img/acc.png" width="100%" alt="" />
             </div>
         </div>
     </div>
