--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="sidepanel__text"><span>Social Network</span></div>
         <div class="sidepanel__divider"></div>
         <a href="#" class="sidepanel__icon">
+            <div></div>
             <img src="icons/instagram.svg" alt="instagram" />
         </a>
         <a href="#" class="sidepanel__icon">
@@ -209,12 +210,12 @@
                 </div>
             </div>
             <div class="promotion__timer">
-                <div class="title">Осталось до конца акции:</div>
+                <div class="title">Limited time left for sale:</div>
                 <div class="timer">
-                    <div class="timer__block"><span id="days">90</span> дней</div>
-                    <div class="timer__block"><span id="hours">08</span> часов</div>
-                    <div class="timer__block"><span id="minutes">11</span> минут</div>
-                    <div class="timer__block"><span id="seconds">01</span> секунд</div>
+                    <div class="timer__block"><span id="days">90</span> Day</div>
+                    <div class="timer__block"><span id="hours">08</span> Hours</div>
+                    <div class="timer__block"><span id="minutes">11</span> Minute</div>
+                    <div class="timer__block"><span id="seconds">01</span> seconds</div>
                 </div>
             </div>
         </div>
@@ -272,7 +273,7 @@
             <div class="modal__content">
                 <form action="#">
                     <div data-close="" class="modal__close">&times;</div>
-                    <div class="modal__title">We will answer you InshaAllah!</div>
+                    <div class="modal__title">We will answer you shortly</div>
                     <input required placeholder="Your Name" name="name" type="text" class="modal__input" />
                     <input required placeholder="Your Mobile Phone" name="phone" type="phone" class="modal__input" />
                     <button class="btn btn_dark btn_min">Call Me</button>
